style-fix:profile_alignment

--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -16,7 +16,7 @@
   column-gap: 17px;
   row-gap: 20px;
   max-width: 880px;
-  margin-left: auto;
+  margin-left: 223px;
   margin-right: auto;
 }
 
