--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -9,10 +9,11 @@
   -webkit-box-pack: start;
   -ms-flex-pack: start;
   justify-content: flex-start;
-  margin-left: auto;
+  align-items:center;
+  margin-left: 200px;
   margin-right: auto;
   margin-top: 40px;
-  margin-bottom: 55px;
+  margin-bottom: 139px;
   max-width: 880px;
   height: 120px;
 }
